--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,18 @@
   <header class="container py-4 px-3 mx-auto text-center">
     <h1 class="mx-auto col-6 col-lg-4 fw-bold">Business and Industrial Parks</h1>
   </header>
-  <section id="hero" class="container-fluid col-md-10 position-relative">
-    <div class="w-100 position-absolute top-100 start-50 translate-middle">
+
+  <!-- Hero Section -->
+  <section id="hero" class="container-fluid col-md-10 position-relative mb-3 position-relative">
+    <img id="hero-bg" class="" src="./images/1940.jpg" alt="Industrial Building">
+    <div class="w-100 position-absolute top-90 start-50 translate-middle mb-3">
       <div class="row row-cols-auto gy-2 justify-content-center">
         <div id="hero-img-container" class="d-flex justify-content-center">
           <img id="hero-img" class="w-100" src="./images/003.jpg" alt="Female consultant" width="240">
         </div>
         <div id="hero-cta"
-          class="py-4 px-3 bg-white text-center d-flex flex-column justify-content-center align-items-center">
-          <p class="fw-bold">
+          class="p-5 bg-white text-center mb-5 d-flex flex-column justify-content-center align-items-center">
+          <p class="fs-6 fs-xl-4 fw-bold">
             We have several business and industrial parks with available space for your business
           </p>
           <a href="#" class="btn btn-outline-dark no-border-rad">READ MORE</a>
