--- a/src/index.html
+++ b/src/index.html
@@ -31,19 +31,25 @@
       </div>
     </div>
   </section>
-  <div class="mt-5 py-5"></div>
-  <section class="mt-5 py-5 col-md-10 mx-auto">
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-md-6 mt-5">
-          <h2>Construction Machinery Co.</h2>
-          <h3 class="fs-5 mt-3">We has a proud tradition of service as a General Contractor since 1974.</h3>
-          <p class="mt-5">We headquartered in San Diego, brings over 42 years of local and national experience; with a reputation for delivering large unique design-build projects ahead of schedule and on budget. Our company has served clients and building owners for over four decades.</p>
-          <a href="#" class="btn btn-outline-dark no-border-rad">READ MORE</a>
-        </div>
-        <div class="col-md-6">
-          <img src="./images/pexelsphoto2884590.jpeg" class="img-fluid" alt="Company Image">
-        </div>
+
+
+
+  <!-- About Section -->
+  <section id="about" class="container-fluid mt-5 py-5 col-md-10 text-center">
+    <div class="my-5 my-sm-3 py-4 py-sm-3"></div>
+    <div class="row row-gap-2 gy-3 justify-content-end">
+      <div class="col-md-8 my-auto mx-auto align-items-center">
+        <h2 class="mx-auto w-50 w-xl-25 fw-bold">Construction Machinery Co.</h2>
+        <h3 class="fs-5 mx-auto mt-3 w-50">We have a proud tradition of service as a General Contractor since 1974
+        </h3>
+        <p class="mt-5 mx-auto w-75">We are headquartered in San Diego and bring over 42 years of local and national
+          experience;
+          with a reputation for delivering large unique design-build projects ahead of schedule and on budget. Our
+          company has served clients and building owners for over four decades.</p>
+        <a href="#" class="btn btn-outline-dark no-border-rad">READ MORE</a>
+      </div>
+      <div class="col-md-4 mb-4">
+        <img class="w-100" src="./images/pexelsphoto2884590.jpeg" alt="Downtown City Scape" width="400">
       </div>
     </div>
   </section>
