--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <!-- Header Section -->
   <header class="container py-4 px-3 mx-auto text-center">
     <h1 class="mx-auto col-6 col-lg-4 fw-bold">Business and Industrial Parks</h1>
   </header>
@@ -26,7 +27,7 @@
           <p class="fs-6 fs-xl-4 fw-bold">
             We have several business and industrial parks with available space for your business
           </p>
-          <a href="#" class="btn btn-outline-dark no-border-rad">READ MORE</a>
+          <a href="#" class="btn btn-outline-dark border-2 no-border-rad">READ MORE</a>
         </div>
       </div>
     </div>
@@ -38,13 +39,15 @@
     <div class="row row-gap-2 gy-3 justify-content-end">
       <div class="col-md-8 my-auto mx-auto align-items-center">
         <h2 class="mx-auto w-50 w-xl-25 fw-bold">Construction Machinery Co.</h2>
-        <h3 class="fs-5 mx-auto mt-3 w-50">We have a proud tradition of service as a General Contractor since 1974
+        <h3 class="fs-5 mx-auto mt-3 w-50">
+          We have a proud tradition of service as a General Contractor since 1974
         </h3>
-        <p class="mt-5 mx-auto w-75">We are headquartered in San Diego and bring over 42 years of local and national
-          experience;
-          with a reputation for delivering large unique design-build projects ahead of schedule and on budget. Our
-          company has served clients and building owners for over four decades.</p>
-        <a href="#" class="btn btn-outline-dark no-border-rad">READ MORE</a>
+        <p class="mt-5 mx-auto w-75">
+          We are headquartered in San Diego and bring over 42 years of local and national
+          experience; with a reputation for delivering large unique design-build projects
+          ahead of schedule and on budget. Our company has served clients and building
+          owners for over four decades.</p>
+        <a href="#" class="btn btn-outline-dark border-2 no-border-rad">READ MORE</a>
       </div>
       <div class="col-md-4 mb-4">
         <img class="w-100" src="./images/pexelsphoto2884590.jpeg" alt="Downtown City Scape" width="400">
@@ -52,19 +55,18 @@
     </div>
   </section>
 
-  <!-- Services Section -->
-  <section id="services" class="bg-black text-white text-center">
-    <div id="services-bg" class="container-fluid mt-5 py-5 col-md-8">
+  <!-- Certifications Section -->
+  <section id="certifications" class="bg-black text-white text-center">
+    <div class="container-fluid mt-5 py-5 col-md-8">
       <h3 class="fs-5">What we do</h3>
       <h2 class="fw-bold">Company Certifications</h2>
-      <p class="mx-auto mb-4 w-lg-50">Our copmany offers a variety of services to meet your project&apos;s needs, to
-        take
-        you from
-        collaboration meetings all the way to ribbon-cutting and beyond. We believe that every project is unique, and
-        can
-        customize our approach to fit your particular project.</p>
+      <p class="mx-auto mb-4 w-lg-50">
+        Our copmany offers a variety of services to meet your project&apos;s needs, to
+        take you from collaboration meetings all the way to ribbon-cutting and beyond.
+        We believe that every project is unique, and can customize our approach to fit
+        your particular project.</p>
       <div class="row gx-3 gy-5">
-        <div class="card col-12 col-sm-4 bg-transparent text-white">
+        <div class="card border-0 col-12 col-sm-4 bg-transparent text-white">
           <svg class="card-img-top mt-4" width="64" height="64" viewBox="0 0 431 463" fill="none"
             aria-label="Icon of a Constructor Worker" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -75,11 +77,15 @@
               fill="white" />
           </svg>
           <div class="card-body">
-            <h4 class="card-title text-break fs-lg-2 mx-auto my-3 w-lg-50">Healthcare Building</h4>
-            <p class="card-text w-lg-75 mx-auto">Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <h4 class="card-title text-break fs-lg-2 mx-auto my-3 w-lg-50">
+              Healthcare Building
+            </h4>
+            <p class="card-text w-lg-75 mx-auto">
+              Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
           </div>
         </div>
-        <div class="card col-12 col-sm-4 bg-transparent text-white">
+        <div class="card border-0 col-12 col-sm-4 bg-transparent text-white">
           <svg class="card-img-top mt-4" width="64" height="64" viewBox="0 0 512 512" fill="none"
             aria-label="Icon of a Constructor Worker with a paint brush and spackle shovel"
             xmlns="http://www.w3.org/2000/svg">
@@ -122,11 +128,15 @@
             </defs>
           </svg>
           <div class="card-body">
-            <h4 class="card-title text-break mx-auto my-3 w-lg-50">Education Building</h4>
-            <p class="card-text w-lg-75 mx-auto">Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <h4 class="card-title text-break fs-lg-2 mx-auto my-3 w-lg-50">
+              Education Building
+            </h4>
+            <p class="card-text w-lg-75 mx-auto">
+              Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
           </div>
         </div>
-        <div class="card col-12 col-sm-4 bg-transparent text-white">
+        <div class="card border-0 col-12 col-sm-4 bg-transparent text-white">
           <svg class="card-img-top mt-4" width="64" height="64" viewBox="0 0 496 496" fill="none"
             aria-label="Icon of a Constructor Worker with a hand saw" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -134,11 +144,15 @@
               fill="white" />
           </svg>
           <div class="card-body">
-            <h4 class="card-title text-break mx-auto my-3 w-lg-50">Government Building</h4>
-            <p class="card-text w-lg-75 mx-auto">Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <h4 class="card-title no-word-break fs-lg-2 mx-auto my-3 w-lg-50">
+              Government Building
+            </h4>
+            <p class="card-text w-lg-75 mx-auto">
+              Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
           </div>
         </div>
-        <div class="card col-12 col-sm-4 bg-transparent text-white">
+        <div class="card border-0 col-12 col-sm-4 bg-transparent text-white">
           <svg class="card-img-top mt-4" width="64" height="64" viewBox="0 0 480 480" fill="none"
             aria-label="Icon of a Constructor Worker in front of residential" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -156,11 +170,15 @@
               fill="white" />
           </svg>
           <div class="card-body">
-            <h4 class="card-title text-break mx-auto my-3 w-lg-50">Residential Building</h4>
-            <p class="card-text w-75 mx-auto">Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <h4 class="card-title text-break fs-lg-2 mx-auto my-3 w-lg-50">
+              Residential Building
+            </h4>
+            <p class="card-text w-lg-75 mx-auto">
+              Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
           </div>
         </div>
-        <div class="card col-12 col-sm-4 bg-transparent text-white">
+        <div class="card border-0 col-12 col-sm-4 bg-transparent text-white">
           <svg class="card-img-top mt-4" width="64" height="64" viewBox="0 0 513 513" fill="none"
             aria-label="Icon of a Constructor Worker with a gear" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0)">
@@ -337,11 +355,15 @@
             </defs>
           </svg>
           <div class="card-body">
-            <h4 class="card-title text-break mx-auto my-3 w-lg-50">Commercial Building</h4>
-            <p class="card-text w-75 mx-auto">Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <h4 class="card-title text-break fs-lg-2 mx-auto my-3 w-lg-50">
+              Commercial Building
+            </h4>
+            <p class="card-text w-lg-75 mx-auto">
+              Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
           </div>
         </div>
-        <div class="card col-12 col-sm-4 bg-transparent text-white">
+        <div class="card border-0 col-12 col-sm-4 bg-transparent text-white">
           <svg class="card-img-top mt-4" width="64" height="64" viewBox="0 0 436 436" fill="none"
             aria-label="Icon of srick and spackle shovel" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0)">
@@ -362,9 +384,16 @@
             </defs>
           </svg>
           <div class="card-body">
-            <h4 class="card-title text-break mx-auto my-3 w-lg-50">Restaurant Facilities</h4>
-            <p class="card-text w-75 mx-auto">Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <h4 class="card-title text-break fs-lg-2 mx-auto my-3 w-lg-50">
+              Restaurant Facilities
+            </h4>
+            <p class="card-text w-lg-75 mx-auto">
+              Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
           </div>
+        </div>
+      </div>
+    </div>
         </div>
       </div>
     </div>
