--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,8 @@
           <p class="fw-bold tracking-wide">
             We have several business and industrial parks with available space for your business
           </p>
-          <a href="#" class="btn btn-outline-dark border-2 no-border-rad tracking-wide fw-light text-dark-subtle">READ MORE</a>
+          <a href="#" class="btn btn-outline-dark border-2 no-border-rad tracking-wide fw-light text-dark-subtle">READ
+            MORE</a>
         </div>
       </div>
     </div>
@@ -424,8 +425,8 @@
           <a href="#" class="btn btn-outline-dark border-2 no-border-rad fw-light">READ MORE</a>
         </div>
       </div>
-      <img class="col-12 col-sm-6 col-lg-4 mt-sm-0 mx-auto" src="./images/pexelsphoto259966.jpeg" alt="construction equipment" width="300"
-        height="400">
+      <img class="col-12 col-sm-6 col-lg-4 mt-sm-0 mx-auto" src="./images/pexelsphoto259966.jpeg"
+        alt="construction equipment" width="300" height="400">
       <div class="col-12 col-lg-4 my-auto">
         <div class="card border-0 bg-transparent">
           <svg class="card-img-top mt-3" width="64" height="64" viewBox="0 0 512 512" fill="none"
@@ -499,6 +500,24 @@
       </div>
     </div>
   </section>
+
+  <!-- Footer/Attribution -->
+  <footer class="bg-light">
+    <div class="d-flex align-items-center justify-content-center py-3">
+      <p class="me-2 mb-0">
+        Created by
+        <a class="text-decoration-none" href="https://github.com/nathanrydel" target="_blank" rel="noopener noreferrer">
+          nathanrydel
+        </a>
+      </p>
+      <p class="mb-0">View the code
+        <a class="text-decoration-none" href="https://github.com/nathanrydel/triumph-tech-assignment" target="_blank"
+          rel="noopener noreferrer">
+          here
+        </a>
+      </p>
+    </div>
+  </footer>
 </body>
 
 </html>
