--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           <p class="fw-bold tracking-wide">
             We have several business and industrial parks with available space for your business
           </p>
-          <a href="#" class="btn btn-outline-dark border-2 no-border-rad tracking-wide fw-light text-dark-subtle">READ
+          <a href="#" class="btn btn-outline-dark border-2 rounded-0 tracking-wide fw-light text-dark-subtle">READ
             MORE</a>
         </div>
       </div>
@@ -48,7 +48,7 @@
           experience; with a reputation for delivering large unique design-build projects
           ahead of schedule and on budget. Our company has served clients and building
           owners for over four decades.</p>
-        <a href="#" class="btn btn-outline-dark border-2 no-border-rad fw-light tracking-wide">READ MORE</a>
+        <a href="#" class="btn btn-outline-dark border-2 rounded-0 fw-light tracking-wide">READ MORE</a>
       </div>
       <div class="col-md-4 mb-4">
         <img class="w-100" src="./images/pexelsphoto2884590.jpeg" alt="Downtown City Scape" width="400">
@@ -79,7 +79,7 @@
           </svg>
           <div class="card-body">
             <h4 class="card-title fw-bold fs-lg-2 mx-auto my-3 w-lg-75">
-              <span class="no-wrap">Healthcare</span> Building
+              <span class="no-wrap">Healthcare</span><br> Building
             </h4>
             <p class="card-text w-lg-90 mx-auto">
               Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -130,7 +130,7 @@
           </svg>
           <div class="card-body">
             <h4 class="card-title fw-bold text-break fs-lg-2 mx-auto my-3 w-lg-75">
-              <span class="no-wrap">Education</span> Building
+              <span class="no-wrap">Education</span><br>Building
             </h4>
             <p class="card-text w-lg-90 mx-auto">
               Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -146,7 +146,7 @@
           </svg>
           <div class="card-body">
             <h4 class="card-title fw-bold no-word-break fs-lg-2 mx-auto my-3 w-lg-75">
-              <span class="nowrap">Government</span> Building
+              <span class="nowrap">Government</span><br>Building
             </h4>
             <p class="card-text w-lg-90 mx-auto">
               Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -172,7 +172,7 @@
           </svg>
           <div class="card-body">
             <h4 class="card-title fw-bold text-break fs-lg-2 mx-auto my-3 w-lg-75">
-              <span class="no-wrap">Residential</span> Building
+              <span class="no-wrap">Residential</span><br> Building
             </h4>
             <p class="card-text w-lg-90 mx-auto">
               Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -357,7 +357,7 @@
           </svg>
           <div class="card-body">
             <h4 class="card-title fw-bold text-break fs-lg-2 mx-auto my-3 w-lg-75">
-              <span class="no-wrap">Commercial</span> Building
+              <span class="no-wrap">Commercial</span><br> Building
             </h4>
             <p class="card-text w-lg-90 mx-auto">
               Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -386,7 +386,7 @@
           </svg>
           <div class="card-body">
             <h4 class="card-title fw-bold text-break fs-lg-2 mx-auto my-3 w-lg-75">
-              <span class="no-wrap">Restaurant</span> Facilities
+              <span class="no-wrap">Restaurant</span><br> Facilities
             </h4>
             <p class="card-text w-lg-90 mx-auto">
               Sample text. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -422,7 +422,7 @@
             Yellow Hats Remodeling Team specializes in tile installation and works directly
             with each.
           </p>
-          <a href="#" class="btn btn-outline-dark border-2 no-border-rad fw-light">READ MORE</a>
+          <a href="#" class="btn btn-outline-dark border-2 rounded-0 fw-light">READ MORE</a>
         </div>
       </div>
       <img class="col-12 col-sm-6 col-lg-4 mt-sm-0 mx-auto" src="./images/pexelsphoto259966.jpeg"
