Fix overflow and scaling problems

--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,15 @@
 
 <body>
   <!-- Header Section -->
-  <header class="container py-4 px-3 mx-auto text-center">
-    <h1 class="mx-auto col-6 col-lg-4 fw-bold display-5">Business and Industrial Parks</h1>
+  <header class="container-fluid py-4 px-3 mx-auto text-center">
+    <h1 class="mx-auto">Business and<br> Industrial Parks</h1>
   </header>
 
   <!-- Hero Section -->
   <section id="hero" class="container-fluid col-md-10 position-relative mb-3 position-relative">
     <img id="hero-bg" class="" src="./images/1940.jpg" alt="Industrial Building">
     <div class="w-100 position-absolute top-90 start-50 translate-middle mb-3">
-      <div class="row row-cols-auto gy-2 justify-content-center">
+      <div class="container mx-auto row row-cols-auto gy-2 justify-content-center">
         <div id="hero-img-container" class="d-flex justify-content-center">
           <img id="hero-img" class="w-100" src="./images/003.jpg" alt="Female consultant" width="240">
         </div>
@@ -57,8 +57,8 @@
   </section>
 
   <!-- Certifications Section -->
-  <section id="certifications" class="bg-black text-white text-center">
-    <div class="container-fluid mx-auto mt-5 py-5 col-md-10">
+  <section id="certifications" class="bg-black text-white text-center container-fluid">
+    <div class="mx-auto mt-5 py-5 col-md-10">
       <h3 class="fs-6 tracking-wide">What we do</h3>
       <h2 class="fw-bold mb-4">Company Certifications</h2>
       <p class="mx-auto mb-4 w-lg-75">
@@ -502,7 +502,7 @@
   </section>
 
   <!-- Footer/Attribution -->
-  <footer class="bg-light">
+  <footer class="container-fluid bg-light">
     <div class="d-flex align-items-center justify-content-center py-3">
       <p class="me-2 mb-0">
         Created by
